src/index.css
/* ... */
.smoothieimage {
    height: 400px;
    width: 400px;
    border: 5px solid #A4D64D;
    border-radius: 50px;
}

.fronttext {
    margin: 20px;
    padding: 30px;
    border: 3px solid #A4D64D;
    border-radius: 50px;
}

.fronttext > h3,
.fronttext > h2 {
    color: white;
}

@media only screen and (max-width: 800px) {

    .frontpage {
        display: block;
        text-align: center;
    }

    .smoothieimage {
        height: 100%;
        width: 100%;
    }

}


/* Aboutpage */

.aboutpage {
    padding-top: 50px;
    margin-left: 15%;
    margin-right: 15%;
}

.person {
    display: flex;
    justify-content: space-between;
    text-align: justify;
    max-height: 100%;
    margin-bottom: 20px;
    margin-right: 10%;
    padding: 10px;
    padding-right: 20px;
    background-color: #3F2D17;
    border: 3px solid #A4D64D;
    border-top-left-radius: 100px;
    border-bottom-left-radius: 100px;
}

.persontwo {
    display: flex;
    justify-content: space-between;
    text-align: justify;
    max-height: 100%;
    margin-bottom: 20px;
    margin-left: 10%;
    padding: 10px;
    padding-left: 20px;
    background-color: #3F2D17;
    border: 3px solid #A4D64D;
    border-top-right-radius: 100px;
    border-bottom-right-radius: 100px;
}

.persontext > h3 {
    color: white;
    text-align: center;
    margin-top: 10px;
    margin-bottom: 10px;
}

.persontext > p {
    color: white;
    padding-right: 10px;
    padding-left: 10px;
}

.person > .persontext > p {
    padding-left: 25px;
}

.persontwo > .persontext > p {
    padding-right: 25px;
}

.personimage {
    height: 170px;
    width: 170px;
    border: 5px solid #A4D64D;
    border-radius: 100px;
}

@media only screen and (max-width: 800px) {

    .aboutpage {
        margin-left: 5%;
        margin-right: 5%;
    }
    .person,
    .persontwo {
        display: block;
        min-height: 200px;
        max-height: 100%;
        border-radius: 50px;
    }

}


/* Blogpage */

.blogpage {
    margin-top: 20px;
    margin-left: 5%;
    margin-right: 5%;
}

.blogs {
    min-width: 200px;
}

.blog {
    display: flex;
    text-align: justify;
    justify-content: space-between;
}

.blogimages {
    margin-top: 10px;
}

.blogimages > p {
    margin-top: 0px;
    text-align: center;
    color: white;
}

.blogimage {
    margin-top: 10px;
    margin-left: 5%;
    margin-right: 5%;
    height: 400px;
    width: 350px;
    border: 3px solid #A4D64D;
    border-radius: 40px;
}

.blogtext {
    margin-top: 20px;
    margin-left: 50px;
    margin-bottom: 50px;
    padding-left: 20px;
    padding-right: 20px;
    padding-bottom: 20px;
    min-height: 200px;
    min-width: 50%;
    border: 3px solid #A4D64D;
    border-radius: 50px;
}

.blogtext > h3,
.blogtext > p {
    color: white;
}

@media only screen and (max-width: 800px) {

    .blog {
        display: block;
        justify-content: space-around;
    }
    .blogimage {
        margin-left: 0px;
        margin-right: 0px;
        width: 95%;
    }
    .blogs {
        max-width: 95%;
    }
    .blogtext {
        margin-left: 0px;
    }
}


/* Recipies page */

.recipiespage {
    margin-left: 5%;
    margin-right: 5%;
}

.recipe {
    display: flex !important;
    justify-content: space-around;
    text-align: justify;
    margin-top: 20px;
}

.recipeimages {
    margin-top: 110px;
    margin-left: 5%;
    margin-right: 5%;
}

.recipeimages > p {
    margin-top: 5px;
    text-align: center;
    color: white;
}

.recipeimage {
    height: 410px;
    width: 445px;
    border-radius: 55px;
}

.subpageban > .recipeimage,
.subpageban > .recipetext > .rectext {
    border: 5px solid #FBF799;
}

.subpageblue > .recipeimage,
.subpageblue > .recipetext > .rectext {
    border: 5px solid #6F7ECE;
}

.subpagestraw > .recipeimage,
.subpagestraw > .recipetext > .rectext {
    border: 5px solid #C36060;
}

.subpageban > .recipetext > h2 {
    color: #FBF799;
}

.subpageblue > .recipetext > h2 {
    color: #6F7ECE;
}

.subpagestraw > .recipetext > h2 {
    color: #C36060;
}

.recipetext {
    min-width: 50%;
    max-width: 70%;
}

.recipetext > h2 {
    text-align: center;
}

.rectext {
    margin-top: 20px;
    padding: 20px;
    padding-left: 30px;
    border-radius: 60px;
}

.rectext > h4,
.rectext > strong > h4 {
    color: white;
}

@media only screen and (max-width: 800px) {
    
    .recipiespage {
        margin-left: 10px;
        margin-right: 0px;
    }
    .recipe {
        display: block !important;
    }
    .recipeimages {
        margin-top: 50px;
    }
    .recipeimage {
        margin-top: 40px;
        height: 90%;
        width: 90%;
    }
    .recipetext {
        max-width: 90%;
    }

}


/* Subpage navigation */

.subpagenav {
    display: flex;
    justify-content: space-evenly;
    text-align: center;
    margin-left: 20%;
    margin-right: 20%;
}

.subpagenav > button {
    margin-left: 20px;
    background-color: transparent;
    border: 0px;
}

.subpagenav > button:hover > h3,
.subpagenav > button:focus > h3 {
    text-decoration: underline;
}

@media only screen and (max-width: 800px) {
    
    .subpagenav {
        width: 100% !important;
        max-width: 100vw !important;
        overflow: hidden;
        margin-left: 0px;
        margin-right: 10px;
    }
    .subpagenav > button > h3 {
        font-size: 16px;
    }

}


/* Footer */

.footer {
    display: flex;
    justify-content: right;
    text-align: center;
    height: 85px;
    margin-top: 20px;
    margin-bottom: 10px;
    margin-left: 1%;
    margin-right: 1%;
}

.footer-0 {
    border-top: 7px solid #FBF799;
}

.footer-1 {
    border-top: 7px solid #6F7ECE;
}

.footer-2 {
    border-top: 7px solid #C36060;
}

.footer-3 {
    border-top: 7px solid #A4D64D;
}

.footer > * {
    margin-right: 30px;
}

.footer > h4 {
    color: white;
}

.footerimage {
    margin-top: 20px;
    height: 40px;
    width: 40px;
    border: 0px solid #A4D64D;
    border-radius: 20px;
}
/* ... */

